// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditSummary handles having exactly the right number of credits 1`] = `
<p
  className="paragraph"
>
  You have currently planned for 
  10
   
  of your 
  10
   required credits.
   Good job!
</p>
`;

exports[`CreditSummary handles having fewer credits than needed 1`] = `
<p
  className="paragraph"
>
  You have currently planned for 
  5
   
  of your 
  10
   required credits.
</p>
`;

exports[`CreditSummary handles having more credits than needed 1`] = `
<p
  className="paragraph"
>
  You have currently planned for 
  15
   
  of your 
  10
   required credits.
   Good job!
</p>
`;

exports[`CreditSummary renders shallowly 1`] = `
<p
  className="paragraph"
>
  You have currently planned for 
  5
   
  of your 
  10
   required credits.
</p>
`;
